[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Task.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://Assets/DefaultTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/Hoe.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/can2.png" type="Texture" id=6]
[ext_resource path="res://Assets/can.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Player.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/Player/Material_001.material" type="Material" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.6767, 1, 0.733048 )

[sub_resource type="Animation" id=2]
resource_name = "Swing"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 40, -180, 0 ), Vector3( 150, -180, 0 ), Vector3( 40, -180, 0 ) ]
}

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 9 )
material/1 = ExtResource( 9 )
material/2 = ExtResource( 9 )
material/3 = ExtResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2, 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="UI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.53418
margin_top = 0.571198
margin_right = 0.53418
margin_bottom = 0.571167
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -355.5
margin_top = -199.5
margin_right = 355.5
margin_bottom = 199.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill_Water" type="Control" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -168.0
margin_right = 287.0
margin_bottom = 168.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="UI/Fill_Water"]
margin_left = 117.953
margin_top = 49.5165
margin_right = 186.953
margin_bottom = 286.517
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="Node" parent="UI"]

[node name="Slot1" type="Panel" parent="UI/Slots"]
margin_left = 268.354
margin_top = 526.588
margin_right = 323.354
margin_bottom = 581.588
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Slots/Slot1"]
margin_left = 43.7252
margin_top = 2.28796
margin_right = 83.7252
margin_bottom = 33.288
text = "1
"

[node name="Slot2" type="Panel" parent="UI/Slots"]
margin_left = 368.354
margin_top = 526.588
margin_right = 423.354
margin_bottom = 581.588
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Slots/Slot2"]
margin_left = 43.7252
margin_top = 2.28796
margin_right = 83.7252
margin_bottom = 33.288
text = "2"

[node name="Slot3" type="Panel" parent="UI/Slots"]
margin_left = 468.354
margin_top = 526.588
margin_right = 523.354
margin_bottom = 581.588
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Slots/Slot3"]
margin_left = 43.7252
margin_top = 2.28796
margin_right = 83.7252
margin_bottom = 33.288
text = "3
"

[node name="Slot4" type="Panel" parent="UI/Slots"]
margin_left = 568.354
margin_top = 526.588
margin_right = 623.354
margin_bottom = 581.588
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Slots/Slot4"]
margin_left = 43.7252
margin_top = 2.28796
margin_right = 83.7252
margin_bottom = 33.288
text = "4
"

[node name="Slot5" type="Panel" parent="UI/Slots"]
margin_left = 668.354
margin_top = 526.588
margin_right = 723.354
margin_bottom = 581.588
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Slots/Slot5"]
margin_left = 43.7252
margin_top = 2.28796
margin_right = 83.7252
margin_bottom = 33.288
text = "5
"

[node name="TMP_Item" type="ColorRect" parent="UI/Slots"]
visible = false
margin_left = 275.661
margin_top = 533.506
margin_right = 315.661
margin_bottom = 573.506
color = Color( 0.980392, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect_Indicator" type="ColorRect" parent="UI"]
margin_left = 275.0
margin_top = 520.0
margin_right = 315.0
margin_bottom = 560.0
rect_scale = Vector2( 0.959999, 0.119999 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RtLbl_CanTip" type="RichTextLabel" parent="UI"]
margin_left = 731.975
margin_top = 27.9967
margin_right = 999.975
margin_bottom = 45.9967
bbcode_enabled = true
bbcode_text = "Go to the[color=#007caf] water station[/color] to refill your can!"
text = "Go to the water station to refill your can!"

[node name="Prog_Can" type="TextureProgress" parent="UI"]
margin_left = 915.475
margin_top = 68.7294
margin_right = 1015.48
margin_bottom = 168.729
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Label" type="Label" parent="UI/Prog_Can"]
margin_left = 41.2377
margin_top = 47.4233
margin_right = 81.2377
margin_bottom = 63.4233
text = "100%"

[node name="Hoe" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 3.06191e-07, 1.11444e-07, 0, 0.34202, -0.939693, -3.25841e-07, -0.939693, -0.34202, 0.501491, 0.243111, -0.202511 )
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hoe"]
anims/Swing = SubResource( 2 )
